<resources>
    <string name="app_name">DiaBite</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="image">image</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="logout">Log out</string>
    <string name="articles">Articles</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="personal_information">Personal Information</string>
    <string name="history">History</string>
    <string name="legend1"><![CDATA[<40%: Low risk]]></string>
    <string name="legend2">40% - 70% : Moderate risk</string>
    <string name="legend3"><![CDATA[>70% : High risk]]></string>
    <string name="resend">&lt;u>Resend Code&lt;/u></string>
    <string name="verify">Verify</string>
    <string name="enter_information">Enter Your Information</string>
    <string name="foodrec">Food Recommendation</string>
    <string name="popup_result">Category: Non Diabetic</string>
    <string name="pie_percent">--%</string>
    <string name="title">Title</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="fill_all">Please fill all the fields</string>
    <string name="otp_invalid">Invalid OTP</string>
    <string name="otp_sent">OTP sent to %1$s. Please check your inbox.</string>
    <string name="tvotp">We’ve sent a code to\n %1$s</string>
    <string name="analyze_diabetes">Analyze Diabetes</string>
    <string name="physical_health">How many days in the last 30 days have you felt physically unwell?</string>
    <string name="general_health">How would you rate your general health? \n(1 = excellent, 5 = poor)</string>
    <string name="mental_health">How many days in the last 30 days have you felt mentally unwell?</string>
    <string name="blood_press">Do you have high blood pressure?</string>
    <string name="cholesterol">Do you have high cholesterol?</string>
    <string name="stroke">Have you ever been diagnosed with a stroke?</string>
    <string name="heart_disease">Have you ever been diagnosed with heart disease or experienced a heart attack?</string>
    <string name="walk_climb">Do you experience any difficulty walking or climbing stairs?</string>
    <string name="submit">Submit</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="good_night">Good night</string>
    <string name="password_required">Password is required</string>
    <string name="otp_required">OTP is required</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_invalid">Password must be at least 5 characters</string>
    <string name="email_required">Email is required</string>
    <string name="email_invalid">Enter a valid email address</string>
    <string name="name_required">Name is required</string>
    <string name="v_height">%1$s cm</string>
    <string name="v_weight">%1$s kg</string>
    <string name="v_age">%1$s y.o</string>
    <string name="v_BP">%1$s / %1$s mmHg</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="systolic">systolic</string>
    <string name="spacer">/</string>
    <string name="diastolic">diastolic</string>
    <string name="mmhg">mmHg</string>
    <string name="gemini">Gemini</string>
    <string name="ask_me_anything">Ask me anything</string>
    <string name="arrow">Arrow</string>
    <string name="monthly_reminder">Monthly Reminder</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="analyze">Analyze</string>
    <string name="food_recom">Food Recom</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="code">Code</string>
    <string name="new_password">New Password</string>
    <string name="con_pass">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_required">Confirm your password</string>
    <string name="quiz">Quiz</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="food_suggestion">Food Suggestion</string>
    <string name="food_suggestion2">Food\nSuggestion</string>
    <string name="onboarding_title1">DiaBite is here to help you understand your diabetes risk in just a few simple steps.</string>
    <string name="onboarding_title2">DiaBite ensures you can still enjoy delicious meals without compromising your health.</string>
    <string name="onboarding_title3">Save your analysis history and learn more about diabetes through educational articles.</string>
    <string name="start">Start</string>
    <string name="empty_image_warning">No image selected</string>
    <string name="gram">%1$s g</string>
    <string name="mg">%1$s mg</string>
    <string name="water">Water</string>
    <string name="calcium">Calcium</string>
    <string name="copper">Copper</string>
    <string name="iron">Iron</string>
    <string name="magnesium">Magnesium</string>
    <string name="manganese">Manganese</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="potassium">Potassium</string>
    <string name="selenium">Selenium</string>
    <string name="zinc">Zinc</string>
    <string name="vitamin_a">Vit A</string>
    <string name="vitamin_b1">Vit B1</string>
    <string name="vitamin_b11">Vit B11</string>
    <string name="vitamin_b12">Vit B12</string>
    <string name="vitamin_b2">Vit B2</string>
    <string name="vitamin_b3">Vit B3</string>
    <string name="vitamin_b5">Vit B5</string>
    <string name="vitamin_b6">Vit B6</string>
    <string name="vitamin_d">Vit D</string>
    <string name="vitamin_c">Vit C</string>
    <string name="vitamin_e">Vit E</string>
    <string name="vitamin_k">Vit K</string>
    <string name="chat_with_gemini">Chat with Gemini</string>
    <string name="food_name">Food name</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="amount_per_serving">Amount Per Serving</string>
    <string name="calories">Calories</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="fat">Fat</string>
    <string name="monounsaturated_fat">Monounsaturated Fat</string>
    <string name="polyunsaturated_fat">Polyunsaturated Fat</string>
    <string name="chol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="dietary_fiber">Dietary Fiber</string>
    <string name="sugars">Sugars</string>
    <string name="protein">Protein</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="blood_pressure_level">Blood Pressure Level</string>
    <string name="or">/</string>
    <string name="save_changes">Save changes</string>
    <string name="strip">-</string>
    <string name="y_o">y.o</string>
    <string name="bmi">BMI</string>
    <string name="kg_m2">kg/m2</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="time">01:00</string>
    <string name="search">Search</string>
    <string name="diabetes_probability">Diabetes Probability</string>
    <string name="no_data">No data</string>
    <string name="zero">0</string>
    <string name="related_articles">Related Articles</string>
    <string name="no_data_available">No data available</string>
    <string name="description">Description</string>
    <string name="result_text">Result</string>
    <string name="progress_text">%1$d%%</string>
    <string name="calNum">100</string>
    <string name="cholesterol2">Cholesterol</string>
    <string name="serving_size">Serving size</string>
    <string name="serving_size_val">100g</string>
    <string name="fat_str">Fat</string>
    <string name="heightT">🧍🏻 Height</string>
    <string name="weightT">🏋🏻 Weight</string>
    <string name="ageT">🎂 Age</string>
    <string name="blood_pressureT">🩸 Blood Pressure</string>
    <string name="food_tips">Food Tips</string>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>