<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.capstone.diabite.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <argument
            android:name="name"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_articles"
        android:name="com.capstone.diabite.ui.articles.ArticlesFragment"
        android:label="@string/articles"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.capstone.diabite.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.capstone.diabite.ui.login.LoginFragment"
        android:label="Login" />

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.capstone.diabite.ui.register.RegisterFragment"
        android:label="Register" />
</navigation>