<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="?attr/android:statusBarColor"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:contentPadding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quiz_title"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/quiz"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/strip"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    style="@style/customButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="8dp"
                    android:layout_height="wrap_content"
                    android:text="@string/True" />

                <Button
                    style="@style/customButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="8dp"
                    android:layout_height="wrap_content"
                    android:text="@string/False" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>