<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.quiz.QuizActivity">

    <ImageButton
        android:id="@+id/back_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/back"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="?attr/android:statusBarColor"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:contentPadding="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quiz_title"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/quiz"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/quiz"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnTrue"
                    style="@style/customButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:text="@string/True" />

                <Button
                    android:id="@+id/btnFalse"
                    style="@style/customButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:text="@string/False" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnNext"
        style="@style/customButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="12dp"
        android:shadowColor="@color/text"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardOtp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:indeterminateTint="@color/dark_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>