<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="?attr/cardForegroundColor"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:contentPadding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="Diabetes Probability"
            android:textSize="22sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:id="@+id/percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview"
            android:layout_centerHorizontal="true">

            <com.capstone.diabite.view.CircularProgressView
                android:id="@+id/circularProgressView"
                android:layout_width="160dp"
                android:layout_height="160dp" />

            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/pie_percent"
                android:textColor="#69AAF1"
                android:textSize="40sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/percentage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/popup_result"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_result"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp">

            <Button
                android:id="@+id/btnFood"
                style="@style/customButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:layout_marginHorizontal="30dp"
                android:text="@string/food_suggestion" />

            <TextView
                android:id="@+id/cancel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnFood"
                android:layout_alignStart="@id/btnFood"
                android:layout_alignEnd="@id/btnFood"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>